--- a/mskam gui/MainPage.ui
+++ b/mskam gui/MainPage.ui
@@ -17,7 +17,7 @@
    <widget class="QCalendarWidget" name="calendarWidget">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>20</x>
       <y>10</y>
       <width>451</width>
       <height>191</height>
@@ -27,50 +27,34 @@
    <widget class="QCalendarWidget" name="calendarWidget_2">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>230</y>
+      <x>20</x>
+      <y>220</y>
       <width>448</width>
       <height>191</height>
      </rect>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>700</x>
-      <y>30</y>
-      <width>231</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>690</x>
-      <y>230</y>
-      <width>231</width>
-      <height>91</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>450</y>
+      <x>20</x>
+      <y>430</y>
       <width>451</width>
       <height>51</height>
      </rect>
     </property>
     <property name="text">
      <string>Upload Prediction FIle</string>
+    </property>
+   </widget>
+   <widget class="QTableView" name="tableView">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>10</y>
+      <width>481</width>
+      <height>641</height>
+     </rect>
     </property>
    </widget>
   </widget>
@@ -80,7 +64,7 @@
      <x>0</x>
      <y>0</y>
      <width>1081</width>
-     <height>25</height>
+     <height>30</height>
     </rect>
    </property>
   </widget>
